Added Custom Events

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -220,10 +220,12 @@ AnimationCurveGroupingDelimiters="._/|\\"
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
-AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
+AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup,AnimSequence.Compression.FCompressedAnimationDataNodeBuilder,AnimSequence.Animation.AnimationTrackNames
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/Actions/IA_Shoot.IA_Shoot
+InputAction=InputMappingContext.Mappings.ActionMappings
 
 [ContentBrowser]
-ContentBrowserTab2.SelectedPaths=/Game/Blueprints/GameMode
+ContentBrowserTab2.SelectedPaths=/Game/Animations
 ContentBrowserTab2.PluginFilters=
 AssetPropertyPicker.ThumbnailSizeGrid=2
 AssetPropertyPicker.ThumbnailSizeList=2
@@ -293,12 +295,15 @@ ContentBrowserTab2.CurrentViewType=1
 ContentBrowserTab2.ZoomScale=0
 ContentBrowserTab2.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab2.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserTab2.JumpMRU=/All/Game/PlayerAssets
+ContentBrowserTab2.JumpMRU=/All/Game/SciFiDoors
+ContentBrowserTab2.JumpMRU=/All/Game/Meshes
+ContentBrowserTab2.JumpMRU=/All/Game/FirstPerson
 ContentBrowserTab2.JumpMRU=/All/Game/Blueprints/GameMode
 ContentBrowserTab2.JumpMRU=/All/Game/Input
 ContentBrowserTab2.JumpMRU=/All/Game/Blueprints
 ContentBrowserTab2.JumpMRU=/All/Game/Blueprints/WeaponBlueprints
 ContentBrowserTab2.JumpMRU=/All/Game/Blueprints/WidgetBlueprints
-ContentBrowserTab2.JumpMRU=/All/Game/FirstPerson
 ContentBrowserTab2.JumpMRU=/All/Game
 ContentBrowserTab2.JumpMRU=/All/Game/Characters/Mannequins/Textures
 ContentBrowserTab2.JumpMRU=/All/Game/Characters/Mannequins/Rigs
@@ -310,10 +315,8 @@ ContentBrowserTab2.JumpMRU=/All/Game/Characters
 ContentBrowserTab2.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserTab2.JumpMRU=/All/Game/Blueprints/Triggerables
 ContentBrowserTab2.JumpMRU=/All/Game/Animations
-ContentBrowserTab2.JumpMRU=/All/Game/PlayerAssets
 ContentBrowserTab2.JumpMRU=/All/Game/Fab
 ContentBrowserTab2.JumpMRU=/All/Game/Levels
-ContentBrowserTab2.JumpMRU=/All/Game/Meshes
 ContentBrowserTab2.JumpMRU=/All/Game/Fab/Megascans/3D/Rusty_Car_Exhaust_wcvoaje/Medium/wcvoaje_tier_2/StaticMeshes
 ContentBrowserTab2.JumpMRU=/All/Game/Fab/Megascans/3D/Rusty_Car_Exhaust_wcvoaje/Medium/wcvoaje_tier_2
 ContentBrowserTab2.JumpMRU=/All/Game/Fab/Megascans/3D/Rusty_Car_Exhaust_wcvoaje/Medium
@@ -585,13 +588,65 @@ InputMappingContext.Mappings=True
 InputMappingContext.Input Modes=True
 InputMappingContext.Registration=True
 InputMappingContext.Description=True
+AssetViewerSettings.Settings=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+PersonaPreviewSceneDescription.Physics=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Animation=True
+AnimMontage.AdditiveSettings=False
+AnimMontage.BlendOption=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+AnimGraphNode_SequencePlayer.Sync=True
+AnimGraphNode_SequencePlayer.Functions=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Tag=True
+AnimGraphNode_SequencePlayer.Bindings=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_StateMachine.Functions=True
+AnimGraphNode_StateMachine.Tag=True
+AnimGraphNode_StateMachine.Bindings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_TransitionResult.Result=True
+AnimGraphNode_TransitionResult.Functions=True
+AnimGraphNode_TransitionResult.Tag=True
+AnimGraphNode_TransitionResult.Bindings=True
+AnimGraphNode_StateResult.Functions=True
+AnimGraphNode_StateResult.Tag=True
+AnimGraphNode_StateResult.Bindings=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_Slot.Functions=True
+AnimGraphNode_Slot.Tag=True
+AnimGraphNode_Slot.Bindings=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_Root.Bindings=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=
 RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -600,13 +655,14 @@ RecentAssetEditors=SkeletonEditor
 OpenAssetsAtExit=/Game/PlayerAssets/BP_CharacterBaseFPS.BP_CharacterBaseFPS
 OpenAssetsAtExit=/Game/Blueprints/WeaponBlueprints/BP_WeaponBase.BP_WeaponBase
 OpenAssetsAtExit=/Game/PlayerAssets/BP_CharacterBase.BP_CharacterBase
+OpenAssetsAtExit=/Game/Animations/ASM_WeaponSwitch.ASM_WeaponSwitch
 OpenAssetsAtExit=/Game/PlayerAssets/SKM_Arissa.SKM_Arissa
 OpenAssetsAtExit=/Game/PlayerAssets/ABP_Player.ABP_Player
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.Animation.AssetUserData\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -617,7 +673,7 @@ CameraComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 InterchangeGenericAssetsPipeline="\"Object\" "
 InterchangePipelineBase="\"Object\" "
@@ -625,9 +681,9 @@ SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
-AnimSequence="\"Object\" "
-AnimSequenceBase="\"Object\" "
-AnimationAsset="\"Object\" "
+AnimSequence="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.Animation.AssetUserData\" "
+AnimSequenceBase="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.Animation.AssetUserData\" "
+AnimationAsset="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.Animation.AssetUserData\" "
 PersonaPreviewSceneAnimationController="\"Object\" "
 PersonaPreviewSceneController="\"Object\" "
 BoneProxy="\"Object\" "
@@ -639,18 +695,38 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 ABP_Player_C="\"Object\" "
 AnimInstance="\"Object\" "
-InputMappingContext="\"Object\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[13]\" "
 InputAction="\"Object\" "
+AnimMontage="\"Object\" \"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+AnimCompositeBase="\"Object\" \"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+AnimationGraph="\"Object\" "
+EdGraph="\"Object\" "
+AnimGraphNode_SequencePlayer="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
+AnimGraphNode_Base="\"Object\" "
+AnimGraphNode_StateMachine="\"Object\" "
+AnimGraphNode_StateMachineBase="\"Object\" "
+AnimStateNode="\"Object\" "
+AnimStateNodeBase="\"Object\" "
+AnimStateTransitionNode="\"Object\" "
+AnimGraphNode_TransitionResult="\"Object\" "
+AnimGraphNode_StateResult="\"Object\" "
+AnimGraphNode_Slot="\"Object\" "
+AnimGraphNode_Root="\"Object\" "
+EditorAnimSegment="\"Object\" "
+EditorAnimBaseObj="\"Object\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Input/IMC_Default
-MRUItem1=/Game/FirstPerson/Lvl_FirstPerson
-MRUItem2=/Game/PlayerAssets/ABP_Player
-MRUItem3=/Game/PlayerAssets/SKM_Arissa
-MRUItem4=/Game/PlayerAssets/BP_CharacterBase
-MRUItem5=/Game/Blueprints/WeaponBlueprints/BP_WeaponBase
-MRUItem6=/Game/PlayerAssets/BP_CharacterBaseFPS
-MRUItem7=/Game/PlayerAssets/SK_Arissa_Skeleton
+MRUItem0=/Game/Animations/ASM_WeaponSwitch
+MRUItem1=/Game/Animations/AS_WeaponSwitch
+MRUItem2=/Game/Input/IMC_Default
+MRUItem3=/Game/PlayerAssets/ABP_Player
+MRUItem4=/Game/FirstPerson/Lvl_FirstPerson
+MRUItem5=/Game/PlayerAssets/SKM_Arissa
+MRUItem6=/Game/PlayerAssets/BP_CharacterBase
+MRUItem7=/Game/Blueprints/WeaponBlueprints/BP_WeaponBase
+MRUItem8=/Game/PlayerAssets/BP_CharacterBaseFPS
+MRUItem9=/Game/PlayerAssets/SK_Arissa_Skeleton
 
 [/Script/Fab.FabLocalAssets]
 PathsListingID=(("/Game/Fab/Megascans/3D/Rusty_Car_Exhaust_wcvoaje", "ce6fd7e2-96f3-4109-9401-5c162077d1cb"))
@@ -805,7 +881,8 @@ EditingModeActive=True
 /Game/Blueprints/WeaponBlueprints/BP_WeaponBase.BP_WeaponBase=0
 /Game/PlayerAssets/SKM_Arissa.SKM_Arissa=0
 /Game/PlayerAssets/ABP_Player.ABP_Player=0
-/Game/Input/IMC_Default.IMC_Default=1
+/Game/Input/IMC_Default.IMC_Default=0
+/Game/Animations/AS_WeaponSwitch.AS_WeaponSwitch=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
@@ -837,8 +914,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -883,7 +960,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Lvl_FirstPerson.Lvl_FirstPerson", ()
 
 [RootWindow]
 ScreenPosition=X=418.667 Y=290.667
-WindowSize=X=1286.000 Y=726.000
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2284,4 +2361,7 @@ bHideUnrelatedNodes=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[MessageLog]
+LastLogListing=PIE
 
